# repro-haskell.nix-1850

./: .gitignore  .hlint.yaml  README  cabal.project  flake.nix  hie.yaml  weeder.dhall
nix/pkgs/benchmarks/: default.nix
nix/pkgs/check-hls/: default.nix
repro/: repro.cabal
repro/src/: Repro.hs
