cabal-version: 3.0
name:          repro
version:       0.0.0.1
copyright:     (c) 2023 Hackworth Ltd
maintainer:    src@hackworthltd.com
author:        Hackworth Ltd <src@hackworthltd.com>
stability:     experimental
synopsis:      Investigating diffs of trees

source-repository head
  type:     git
  location: https://github.com/hackworthltd/tree-diff-exploration

common options-lib
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    LambdaCase
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints
    -Wmissing-deriving-strategies -fhide-source-paths

common options
  import:      options-lib
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

library
  import:          options-lib
  hs-source-dirs:  src
  exposed-modules: Repro
  build-depends:
    , base        >=4.12    && <4.17.0
    , containers  >=0.6.0.1 && <0.7.0
    , optparse-applicative    ^>=0.17

test-suite repro-test
  import:         options
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  --TODO This currently breaks with haskell.nix, so we manually add it to `flake.nix` instead.
  -- See: https://github.com/input-output-hk/haskell.nix/issues/839
  build-tool-depends: tasty-discover:tasty-discover ^>=4.2.4
  build-depends:
    , base
    , tasty     ^>=1.4.2.1
    , repro

benchmark repro-benchmark
  import:         options
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: bench
  build-depends:
    , base
    , criterion  ^>=1.6.0.0
    , repro
